--- a/src/app.less
+++ b/src/app.less
@@ -1,18 +1,30 @@
+@dark-gray-backup: #191919;
+@dark-gray: #424141;
+@smurk-gray: #a8a8a8;
+@simple-gray: #5b6467;
+@mood-aqua: #00acd7;
+
+
+
 html {
     margin: 0;
     padding: 0;
     width: 100%;
     height: 100%;
 }
+
 .title-aw {
     font-family: 'Audiowide', cursive;
     font-weight: bold !important;
     font-size: 16px;
     letter-spacing: 1px;
+    color: @mood-aqua;
 }
+
 .text {
     font-family: 'Roboto', sans-serif;
 }
+
 .fixed-left {
     display: flex;
     position: fixed;
@@ -24,6 +36,7 @@ html {
     transition: transform 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
     transform: translateX(-100px);
 }
+
 .fixed-full {
     display: flex;
     position: fixed;
@@ -31,6 +44,7 @@ html {
     left: 0;
     padding: 10px;
 }
+
 .fixed-right {
     display: flex;
     position: fixed;
@@ -45,90 +59,114 @@ html {
 
 .account {
     transition: opacity 1s;
+
     .error {
         transition: opacity 0.5s;
     }
 }
+
 body {
-    background: gray;
+    background-image: linear-gradient(315deg, #485461 0%, #222a33 74%);
 }
 
 
 .avatar {
     padding: 6px;
-    .icon {
-        transform: scale(1);
-        transition: all .2s ease-in-out;
-        cursor: pointer;
-        &:hover {
-            transform: scale(1.08);
-        }
-        .base {
-            padding: 3px;
-            width: 48px;
-            width: 48px;
-            height: 48px;
-            border-radius: 5px;
-            background: #eee;
-            display: inline-block;
-        }
+    transform: scale(1);
+    transition: all .2s ease-in-out;
+    cursor: pointer;
+
+    &:hover {
+        transform: scale(1.08);
+    }
+    .group {
+        padding: 3px;
+        width: 48px;
+        height: 48px;
+        border-radius: 5px;
+        background: black;
+        display: inline-block;
+
+    }
+    .avatar-big { 
+        width: 100px;
+        height: 100px;
+        border-radius: 5px;
+        background: black;
+        display: inline-block;
+    }
+    .user {
+
+    }
+    .selected {
+        background: @mood-aqua;
     }
 }
 
+.sidebar {
+    &::-webkit-scrollbar-thumb {
+        background: #191919;
+    }
 
-
+    &::-webkit-scrollbar-track {
+        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+        background-color: #F5F5F5;
+    }
+}
 
 .portal {
     transition: opacity 1s, width 2s;
 
+    .home {
+        .header {
+            background-color: @dark-gray;
+            background-image: linear-gradient(50deg, @dark-gray 0%, @simple-gray 74%);
+        }
+
+        .body {
+            background: #a8a8a8;
+        }
+    }
+
     .group {
         .item {
             transition: ease-in 0.2s;
+
             &:hover {
                 transform: translate3d(-5px, 0px, 0px);
                 filter: brightness(90%);
             }
         }
+        .header {
+            background-color: @dark-gray;
+            background-image: linear-gradient(50deg, @dark-gray 0%, @simple-gray 74%);
+        }
+
+        .body {
+            background: #a8a8a8;
+        }
     }
+
     .group-sidebar {
         &::-webkit-scrollbar-thumb {
             background: #191919;
         }
+
         &::-webkit-scrollbar-track {
-            -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+            -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
             background-color: #F5F5F5;
         }
     }
-    .avatar {
-        padding: 6px;
-        .icon {
-            transform: scale(1);
-            transition: all .2s ease-in-out;
-            cursor: pointer;
-            &:hover {
-                transform: scale(1.08);
-            }
-            .base {
-                padding: 3px;
-                width: 48px;
-                width: 48px;
-                height: 48px;
-                border-radius: 5px;
-                background: #eee;
-                display: inline-block;
-            }
 
-        }
-        
-    }
     .search {
         width: 200px;
         margin-top: -5px;
         font-size: 14px;
         background: transparent;
         border: 0;
-        box-shadow: none; 
+        box-shadow: none;
     }
+
     .user {
         .item {
             &:hover {
@@ -136,14 +174,16 @@ body {
             }
         }
     }
+
     .sidebar-right-popout {
         margin-left: 10px;
         transition: width 0.7s;
         overflow: auto;
         border-radius: 10px;
-        &::-webkit-scrollbar { 
-            display: none; 
-            }
+
+        &::-webkit-scrollbar {
+            display: none;
+        }
     }
 }
 
@@ -153,7 +193,7 @@ body {
 .scrollY {
     &::-webkit-scrollbar {
         width: 5px;
-        
+
         z-index: 80;
         padding: 3px;
         margin-right: 10px;
@@ -163,6 +203,7 @@ body {
         background: gray;
     }
 }
+
 .scrollX {
     &::-webkit-scrollbar {
         width: 5px;
@@ -171,6 +212,7 @@ body {
         padding: 3px;
         margin-right: 10px;
     }
+
     &::-webkit-scrollbar-thumb {
         background: gray;
     }
@@ -178,7 +220,7 @@ body {
 
 
 .ant-tooltip-inner {
-    background-color: rgb(0, 172, 215, 0.75) !important;
+    background-color: @mood-aqua  !important;
 }
 
 .home {
@@ -189,18 +231,50 @@ body {
 }
 
 
-@keyframes border-pulsate {
-    0%   { border-color: rgba(255, 255, 255, 1); }
-    50%  { border-color: rgba(255, 255, 255, 0.5); }
-    100% { border-color: rgba(255, 255, 255, 1); }
-}
-
 .center {
     text-align: center;
 }
+
 div {
     //border: 1px solid black;
 }
+
+.modal-group-settings {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+.settings {
+    .body {
+        background: @smurk-gray;
+        .view {
+            .title {
+                .text {
+                    font-size: 20px;
+                    padding: 0px;
+                    margin: 7px;
+                    font-weight: "bold";
+                }
+            }
+        }
+        .sidebar {
+            background: darken(@smurk-gray, 20%);
+            .group {
+                &:hover {
+                    color: @mood-aqua;
+                    cursor: pointer;
+                }
+
+                color: black;
+                font-weight: bold;
+            }
+            .selected {
+                color: @mood-aqua;
+            }
+        }
+    }
+}
+
 .color {
     .emerald {
         color: 29bb9c;
