Switch to yarn, update notifications, and more
UPDATED:
- Notifications Fixed height
- Notifications:

ADDED:
- Notifications: Makrdown Support for notifications and for notifications listings
- Notifications: Remove all listings when user logs out
- Notifications: Event Button, event button system which supports a event call

--- a/src/app.less
+++ b/src/app.less
@@ -259,9 +259,10 @@ div {
         }
         .sidebar {
             background: darken(@smurk-gray, 20%);
+            
             .group {
                 &:hover {
-                    color: @mood-aqua;
+                    color: white;
                     cursor: pointer;
                 }
 
